<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.PersonFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_personal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        style="@style/Widget.Mechanic.Button.TextButton"
        android:text="@string/caption_personal"
        app:icon="@drawable/down_arrow"
        android:gravity="start"
        app:iconGravity="textStart"
        android:layout_margin="10dp"
        android:textDirection="rtl" />

    <com.zigis.materialtextfield.MaterialTextField
        android:id="@+id/mtf_personal_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mb_personal"
        app:layout_constraintEnd_toEndOf="@id/mb_personal"
        android:hint="@string/marketer_hint_name"
        android:visibility="gone"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:maxLength="30"
        android:maxLines="1"
        android:gravity="end"
        android:textDirection="rtl"
        android:layoutDirection="rtl"
        android:fontFamily="@font/behdad"
        android:inputType="text"
        app:underlineHeight="1.5dp"
        app:isClearEnabled="false"
        app:cursorDrawableColor="@color/colorAccent"
        app:activeHintColor="@color/colorAccent"
        app:defaultUnderlineColor="@color/colorPrimary"
        app:activeUnderlineColor="@color/colorAccent" />

    <com.zigis.materialtextfield.MaterialTextField
        android:id="@+id/mtf_personal_family"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mtf_personal_name"
        app:layout_constraintEnd_toEndOf="@id/mtf_personal_name"
        android:hint="@string/marketer_hint_family"
        android:visibility="gone"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:maxLength="30"
        android:maxLines="1"
        android:fontFamily="@font/behdad"
        android:inputType="text"
        app:underlineHeight="1.5dp"
        app:isClearEnabled="false"
        android:layoutDirection="rtl"
        app:cursorDrawableColor="@color/colorAccent"
        app:activeHintColor="@color/colorAccent"
        app:defaultUnderlineColor="@color/colorPrimary"
        app:activeUnderlineColor="@color/colorAccent" />

    <com.zigis.materialtextfield.MaterialTextField
        android:id="@+id/mtf_personal_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mtf_personal_family"
        app:layout_constraintEnd_toEndOf="@id/mtf_personal_family"
        android:hint="@string/marketer_hint_phone"
        android:visibility="gone"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:maxLength="30"
        android:maxLines="1"
        android:layoutDirection="rtl"
        android:fontFamily="@font/behdad"
        android:inputType="number"
        app:underlineHeight="1.5dp"
        app:isClearEnabled="false"
        app:cursorDrawableColor="@color/colorAccent"
        app:activeHintColor="@color/colorAccent"
        app:defaultUnderlineColor="@color/colorPrimary"
        app:activeUnderlineColor="@color/colorAccent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mtf_personal_phone"
        app:layout_constraintEnd_toEndOf="@id/mb_personal"
        style="@style/Widget.Mechanic.Button.TextButton"
        android:text="@string/caption_car"
        app:icon="@drawable/down_arrow"
        android:gravity="start"
        app:iconGravity="textStart"
        android:layout_margin="10dp"
        android:textDirection="rtl" />

    <com.zigis.materialtextfield.MaterialTextField
        android:id="@+id/mtf_car_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mb_car"
        app:layout_constraintEnd_toEndOf="@id/mb_car"
        android:hint="@string/hint_car_brand"
        android:visibility="gone"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:maxLength="30"
        android:maxLines="1"
        android:layoutDirection="rtl"
        android:fontFamily="@font/behdad"
        android:inputType="text"
        app:underlineHeight="1.5dp"
        app:isClearEnabled="false"
        app:cursorDrawableColor="@color/colorAccent"
        app:activeHintColor="@color/colorAccent"
        app:defaultUnderlineColor="@color/colorPrimary"
        app:activeUnderlineColor="@color/colorAccent" />

    <com.zigis.materialtextfield.MaterialTextField
        android:id="@+id/mtf_car_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mtf_car_brand"
        app:layout_constraintEnd_toEndOf="@id/mtf_car_brand"
        android:hint="@string/hint_car_model"
        android:visibility="gone"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:layoutDirection="rtl"
        android:maxLength="30"
        android:maxLines="1"
        android:fontFamily="@font/behdad"
        android:inputType="text"
        app:underlineHeight="1.5dp"
        app:isClearEnabled="false"
        app:cursorDrawableColor="@color/colorAccent"
        app:activeHintColor="@color/colorAccent"
        app:defaultUnderlineColor="@color/colorPrimary"
        app:activeUnderlineColor="@color/colorAccent" />

    <com.zigis.materialtextfield.MaterialTextField
        android:id="@+id/mtf_car_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mtf_car_model"
        app:layout_constraintEnd_toEndOf="@id/mtf_car_model"
        android:hint="@string/hint_car_color"
        android:visibility="gone"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:maxLength="30"
        android:maxLines="1"
        android:layoutDirection="rtl"
        android:fontFamily="@font/behdad"
        android:inputType="text"
        app:underlineHeight="1.5dp"
        app:isClearEnabled="false"
        app:cursorDrawableColor="@color/colorAccent"
        app:activeHintColor="@color/colorAccent"
        app:defaultUnderlineColor="@color/colorPrimary"
        app:activeUnderlineColor="@color/colorAccent" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner_car_gear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mtf_car_color"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        android:layout_marginTop="15dp"
        app:ms_hide_arrow="false"
        android:ems="13"
        app:ms_text_color="@color/windowBackground"
        app:ms_arrow_tint="@color/ex"
        android:hint="@string/hint_type_gear"
        android:textColorHint="@color/windowBackground"
        app:ms_background_color="@color/textColorPrimary"
        app:ms_dropdown_height="wrap_content"
        android:textSize="14.5sp"
        app:fontFamily="@font/behdad"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_pelak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinner_car_gear"
        app:layout_constraintEnd_toEndOf="@id/mb_car"
        style="@style/Widget.Mechanic.Button.TextButton"
        android:text="@string/caption_pelak"
        app:icon="@drawable/down_arrow"
        android:gravity="start"
        app:iconGravity="textStart"
        android:layout_margin="10dp"
        android:textDirection="rtl" />

    <com.zigis.materialtextfield.MaterialTextField
        android:id="@+id/mtf_pelak_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mb_pelak"
        app:layout_constraintStart_toStartOf="@id/mb_pelak"
        android:visibility="gone"
        android:hint="@string/hint_first_pelak"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:maxLength="2"
        android:maxLines="1"
        android:fontFamily="@font/behdad"
        android:inputType="number"
        app:underlineHeight="1.5dp"
        app:isClearEnabled="true"
        app:cursorDrawableColor="@color/colorAccent"
        app:activeHintColor="@color/colorAccent"
        app:defaultUnderlineColor="@color/colorPrimary"
        app:activeUnderlineColor="@color/colorAccent" />

    <com.zigis.materialtextfield.MaterialTextField
        android:id="@+id/mtf_pelak_last"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mtf_pelak_first"
        app:layout_constraintEnd_toEndOf="@id/mtf_pelak_first"
        android:visibility="gone"
        android:hint="@string/hint_last_pelak"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:maxLength="3"
        android:maxLines="1"
        android:fontFamily="@font/behdad"
        android:inputType="number"
        app:underlineHeight="1.5dp"
        app:isClearEnabled="true"
        app:cursorDrawableColor="@color/colorAccent"
        app:activeHintColor="@color/colorAccent"
        app:defaultUnderlineColor="@color/colorPrimary"
        app:activeUnderlineColor="@color/colorAccent" />

    <com.zigis.materialtextfield.MaterialTextField
        android:id="@+id/mtf_pelak_iran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mtf_pelak_last"
        app:layout_constraintEnd_toEndOf="@id/mtf_pelak_last"
        android:hint="@string/hint_iran_pelak"
        android:visibility="gone"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:maxLength="2"
        android:maxLines="1"
        android:fontFamily="@font/behdad"
        android:inputType="number"
        app:underlineHeight="1.5dp"
        app:isClearEnabled="true"
        app:cursorDrawableColor="@color/colorAccent"
        app:activeHintColor="@color/colorAccent"
        app:defaultUnderlineColor="@color/colorPrimary"
        app:activeUnderlineColor="@color/colorAccent" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner_pelak_char"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mtf_pelak_iran"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        android:layout_marginTop="15dp"
        app:ms_hide_arrow="false"
        android:ems="10"
        app:ms_text_color="@color/windowBackground"
        app:ms_arrow_tint="@color/ex"
        android:hint="@string/hint_char_pelak"
        android:textColorHint="@color/windowBackground"
        app:ms_background_color="@color/textColorPrimary"
        app:ms_dropdown_height="wrap_content"
        android:textSize="14.5sp"
        app:fontFamily="@font/behdad"/>

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner_oil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_pelak_char"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="visible"
        android:layout_marginTop="25dp"
        app:ms_hide_arrow="false"
        android:ems="13"
        app:ms_text_color="@color/windowBackground"
        app:ms_arrow_tint="@color/ex"
        android:hint="@string/hint_used_oil"
        android:textColorHint="@color/windowBackground"
        app:ms_background_color="@color/textColorPrimary"
        app:ms_dropdown_height="wrap_content"
        android:textSize="14.5sp"
        app:fontFamily="@font/behdad"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/confirmation_lottie"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        app:lottie_rawRes="@raw/confirmation"
        app:lottie_loop="false"
        app:lottie_autoPlay="true"/>




    <com.akshay.library.CurveBottomBar
        android:id="@+id/curveBottomBar_person"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:itemIconTint="@color/colorPrimary"
        android:layout_gravity="bottom"
        app:bottomBarColor="@color/colorAccent"
        app:curveRadius="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.956"
        android:src="@drawable/ic_person_add"
        style="@style/Widget.Mechanic.Fab" />

</androidx.constraintlayout.widget.ConstraintLayout>