<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SignUpFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo_su"
        android:layout_width="110dp"
        android:layout_height="110dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logo_sign_up"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Mechanic.TextInputLayout"
        android:id="@+id/input_name"
        android:layout_width="@dimen/width_of_inputLayouts"
        android:layout_height="wrap_content"
        app:shapeAppearance="@style/CornerCut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_su"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="60dp"
        android:hint="@string/marketer_hint_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="30"
            android:textAlignment="textStart"
            android:fontFamily="@font/behdad"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Mechanic.TextInputLayout"
        android:id="@+id/input_family"
        android:layout_width="@dimen/width_of_inputLayouts"
        app:shapeAppearance="@style/CornerCut"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/between_inputLayouts_margin"
        app:layout_constraintTop_toBottomOf="@id/input_name"
        app:layout_constraintEnd_toEndOf="@id/input_name"
        android:hint="@string/marketer_hint_family">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_family"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="30"
            android:textAlignment="textStart"
            android:fontFamily="@font/behdad"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_code_melli"
        style="@style/Widget.Mechanic.TextInputLayout"
        android:layout_width="@dimen/width_of_inputLayouts"
        android:layout_height="wrap_content"
        android:hint="@string/marketer_hint_code"
        app:shapeAppearance="@style/CornerCut"
        app:layout_constraintTop_toBottomOf="@id/input_family"
        app:layout_constraintEnd_toEndOf="@id/input_name"
        app:startIconDrawable="@drawable/ic_visibility_off"
        android:layout_marginTop="@dimen/between_inputLayouts_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_su_code_melli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/behdad"
            android:inputType="number"
            android:textAlignment="textEnd"
            android:maxLength="10"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Mechanic.TextInputLayout"
        android:id="@+id/input_brand"
        app:shapeAppearance="@style/CornerCut"
        android:layout_width="@dimen/width_of_inputLayouts"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/between_inputLayouts_margin"
        app:layout_constraintTop_toBottomOf="@id/input_code_melli"
        app:layout_constraintEnd_toEndOf="@id/input_name"
        app:layout_constraintStart_toStartOf="@id/input_family"
        app:startIconDrawable="@drawable/ic_store"
        android:hint="@string/marketer_hint_brand">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textAlignment="textStart"
            android:fontFamily="@font/behdad"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_width="@dimen/width_of_inputLayouts"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/input_brand"
        app:layout_constraintStart_toStartOf="@id/input_brand"
        app:layout_constraintEnd_toEndOf="@id/input_brand"
        android:layout_marginTop="35dp"
        android:text="@string/sign_up"
        style="@style/Widget.Mechanic.Button"
        app:shapeAppearance="@style/CornerRound"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/linear_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_guid_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guid_to_sign_in"
            style="@style/Widget.Mechanic.Button.TextButton"
            app:shapeAppearance="@style/CornerRound"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_already"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/special"
            android:textColor="@color/colorAccent"
            android:text="@string/already_have_an_acc"/>

    </LinearLayout>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/su_lottie_bee_loading"
        app:lottie_rawRes="@raw/bee_loading"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="150dp"
        android:layout_height="150dp" />

</androidx.constraintlayout.widget.ConstraintLayout>